TestCases/LLVMTests/SyntaxErrorTests/tests/test32.c
printf("%d", 1);    // also stopped by the grammar

int main(){
    return 0;
}